--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "ejemplo": "node ejemplo-alumnos.js"
+    "start": "node src/main.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@llamaindex/ollama": "^0.1.5",
+    "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "llamaindex": "^0.10.6",
     "zod": "^3.24.4"
-  }
+  },
+  "type": "module"
 }
